# c-project-template

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  docker-ubuntu-build.sh  docker-ubuntu-run.sh  make.sh  run.sh  test.sh
.devcontainer/: Dockerfile  devcontainer.json
apps/: CMakeLists.txt  data-race.c  main.c  signed-int-overflow.c  use-after-free.c
include/: modern.h  noerr.h
src/: CMakeLists.txt
src/modern/: lib.c
src/noerr/: lib.c  str_safe.c  str_safe.h
tests/: CMakeLists.txt  modern_test.cc  noerr_test.cc
